fix white space on bottom of background img  and add to render \  to username error

--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
-    height: 100vh;
+    height: 110vh;
     font-family: 'Open Sans', sans-serif;
     max-width: 1300px;
     margin: auto;
